Thu Jun  8 15:48:14 1995  Matti Aarnio  <mea@nic.funet.fi>

	* funetnje.texinfo:
	    Some additional chapters

	* unix_tcp.c:
	    FINALLY realized why sometimes file sending from
	    queue does not start on some lines.  Reason was
	    that PASSIVE VMNET open didn't clear all multi-
	    stream bookkeeping bits -> all lines were "in use",
	    when line started often enough in passive mode :-(
	    (That is, on PASSIVE start, if previous shutdown
	     had happened with all streams sending something..)

	* protocol.c, consts.h, unix.c, unix_tcp.c, io.c:
	    Serious Hacking -- NBSTREAM does not work without
	    USE_XMIT_QUEUE - had to implement it properly.

	* unix_brdcst.c, nmr_unix.c:
	    Linux feature(s) of UTMP usage caused some surprises,
	    now created necessary "#ifdef __linux__" "fix".

Tue Jun  6 12:28:31 1995  Matti Aarnio  <mea@nic.funet.fi>

	* unix_tcp.c, protocol.c:
	    Couple more NBSTREAM tests so that we won't run over ourselves
	    when transmiting on a stream.

	* file_queue.c, io.c:
	    Revised slightly the queue handling - when restarting a link,
	    ALWAYS tear apart the current state.
	    ("debug rescan" must not destroy the current queue state,
	     however genuine link restart can do it - while requeueing.)

	* nmr.c, io.c, consts.h:
	    Requeue NMR-messages ("struct MESSAGE" changed a bit)
	    when a link restarts.

Wed May 24 13:19:13 1995  Matti Aarnio  <mea@nic.funet.fi>

	* unix.c, unix_tcp.c, protocol.c, prototypes.h:
	    Still more revisions into NBSTREAM processing code,
	    also tried to improve sending speed, which now clocks
	    to 50kB/s or better.. ( Previously 30kB/s was tops
	    with 0.25 sec timeout on select(), now select timeout
	    is changed to 1.0 sec :-)  )

Thu May 18 02:51:44 1995  Matti Aarnio  <mea@nic.funet.fi>

	* sendfile.c:
	    Revised target-address processing..

	* nmr.c, send.c:
	    Consider only codes below ASCII ' ' (SPACE) to be bad on message