@@ -162,8 +162,8 @@ INSTALL=installbsd
 #RANLIB=ranlib
 #INSTALL=install
 
-# Linux 0.99pl13  (w/o using -D_POSIX_SOURCE)
-#CDEFS= -O6 -DCOMMAND_MAILBOX_SOCKET -DHAS_LSTAT -DHAS_PUTENV -DNBSTREAM -DUSE_XMIT_QUEUE
+# Linux 1.2.x  (w/o using -D_POSIX_SOURCE)
+#CDEFS= -O6 -DCOMMAND_MAILBOX_DGRAM -DHAS_LSTAT -DHAS_PUTENV -DNBSTREAM -DUSE_XMIT_QUEUE
 #CC=gcc
 #CPP=gcc -E
 #CFLAGS= -g $(CDEFS)
