@@ -27,7 +27,8 @@ usage(msg)
 %s:  Filters BITEARN.NODES data to mailer databases\n\
      namesfilter -zmailer  < bitearn.nodes | sort > bitnet.routes\n\
      namesfilter -smail    < bitearn.nodes | sort > bitnet.routes\n\
-     namesfilter -sendmail < bitearn.nodes | sort > bitnet.routes\n",
+     namesfilter -sendmail < bitearn.nodes | sort > bitnet.routes\n\
+     namesfilter -netsoft  < bitearn.nodes | sort > netsoft.list\n",
 		progname);
 	exit(EX_USAGE);
 }
@@ -38,6 +39,7 @@ extern int strncmp();
 #define FMT_ZMAILER  1
 #define FMT_SENDMAIL 2
 #define FMT_SMAIL    3
+#define FMT_NETSOFT  4
 
 void strlower(s)
 	char *s;
@@ -65,6 +67,7 @@ main(argc,argv)
 	char *node;
 	char *mailer;
 	char *internet;
+	char *netsoft;
 	int i;
 	int outfmt;
 	char *smailtail = "";
@@ -79,6 +82,11 @@ main(argc,argv)
 	  outfmt = FMT_SMAIL;
 	} else if (strcmp(argv[1],"-sendmail")==0) {
 	  outfmt = FMT_ZMAILER; /* At least P.Bryant uses this same format.. */
+	} else if (strcmp(argv[1],"-netsoft")==0) {
+	  outfmt = FMT_NETSOFT;
+	  /* picklist[0] == "node." */
+	  picklist[1] = "netsoft.";
+	  picklist[2] = NULL;
 	} else {
 	  usage("Unknown format specifier!  Valid ones: -zmailer, -sendmail, -smail");
 	}
@@ -95,9 +103,10 @@ main(argc,argv)
 	  np = namesparse(stdin,picklist,selector);
 	  if (!np) break;
 
-	  node = NULL;
-	  mailer = NULL;
+	  node     = NULL;
+	  mailer   = NULL;
 	  internet = NULL;
+	  netsoft  = NULL;
 	  for (i=0; np[i] != NULL; ++i) {
 	    if (strncmp(np[i],":node.",6)==0)
 	      node = np[i]+6;
@@ -119,62 +128,73 @@ main(argc,argv)
 		}
 		++s;
 	      }
-	    }
+	    } else if (strncmp(np[i],":netsoft.",9)==0)
+	      netsoft = np[i]+9;
 	  }
 	  strlower(node);
 	  printf("%s\t",node);
 	  if (strlen(node)<8)
 	    putc('\t',stdout);
-	  if (!mailer) {
-	    printf("defrt1!%s%s\n",node,smailtail);
-	  } else {
-	    /* Some mailer defined, what it is ? */
-	    char *m0, *m1, *m2, *m3, *m4;
-	    int netdata = 0;
-	    int rfc822  = 0;
-	    m0 = mailer; /* The MAILER definition! */
-	    while (*mailer != 0 && *mailer != '(') ++mailer;
-	    if (*mailer == '(') *mailer++ = 0;
-	    m1 = strchr(m0,'@'); if (m1 != NULL) *m1 = '!';
-	    m1 = mailer; /* "MAIL", ignored.. */
-	    while (*mailer != 0 && *mailer != ',') ++mailer;
-	    if (*mailer == ',') *mailer++ = 0;
-	    m2 = mailer; /* PU, ND, LP .. format, default: PU */
-	    while (*mailer != 0 && *mailer != ',') ++mailer;
-	    if (*mailer == ',') *mailer++ = 0;
-	    m3 = mailer; /* Class, ignored */
-	    while (*mailer != 0 && *mailer != ',') ++mailer;
-	    if (*mailer == ',') *mailer++ = 0;
-	    m4 = mailer; /* BSMTP, BSMTP RFC822, default: BSMTP */
-	    while (*mailer != 0 && *mailer != ',' && *mailer != ')') ++mailer;
-	    /* It is split.. */
-	    while (*m2 != 0) {
-	      if (strncmp(m2,"ND",2)==0) {
-		netdata = 1;
+
+	  if (outfmt == FMT_NETSOFT) {
+
+	    if (netsoft == NULL)
+	      netsoft = "(unlisted)";
+	    printf("%s\n",netsoft);
+
+	  } else {	/* All MAILER formats */
+
+	    if (!mailer) {
+	      printf("defrt1!%s%s\n",node,smailtail);
+	    } else {
+	      /* Some mailer defined, what it is ? */
+	      char *m0, *m1, *m2, *m3, *m4;
+	      int netdata = 0;
+	      int rfc822  = 0;
+	      m0 = mailer;	/* The MAILER definition! */
+	      while (*mailer != 0 && *mailer != '(') ++mailer;
+	      if (*mailer == '(') *mailer++ = 0;
+	      m1 = strchr(m0,'@'); if (m1 != NULL) *m1 = '!';
+	      m1 = mailer;	/* "MAIL", ignored.. */
+	      while (*mailer != 0 && *mailer != ',') ++mailer;
+	      if (*mailer == ',') *mailer++ = 0;
+	      m2 = mailer;	/* PU, ND, LP .. format, default: PU */
+	      while (*mailer != 0 && *mailer != ',') ++mailer;
+	      if (*mailer == ',') *mailer++ = 0;
+	      m3 = mailer;	/* Class, ignored */
+	      while (*mailer != 0 && *mailer != ',') ++mailer;
+	      if (*mailer == ',') *mailer++ = 0;
+	      m4 = mailer;	/* BSMTP, BSMTP RFC822, default: BSMTP */
+	      while (*mailer != 0 && *mailer != ',' && *mailer != ')') ++mailer;
+	      /* It is split.. */
+	      while (*m2 != 0) {
+		if (strncmp(m2,"ND",2)==0) {
+		  netdata = 1;
+		  ++m2;
+		}
 		++m2;
 	      }
-	      ++m2;
-	    }
-	    while (*m4 != 0) {
-	      if (strncmp(m4,"BSMTP",5)==0) {
-		m4 += 4;
-	      } else if (strncmp(m4,"RFC822",6)==0) {
-		rfc822 = 1;
-		m4 += 5;
+	      while (*m4 != 0) {
+		if (strncmp(m4,"BSMTP",5)==0) {
+		  m4 += 4;
+		} else if (strncmp(m4,"RFC822",6)==0) {
+		  rfc822 = 1;
+		  m4 += 5;
+		}
+		++m4;
 	      }
-	      ++m4;
-	    }
-	    strlower(m0);
-	    /* The entry is parsed, output it.. */
+	      strlower(m0);
+	      /* The entry is parsed, output it.. */
 
-	    if (netdata == 0 && rfc822 == 0)
-	      printf("bsmtp3!%s%s\n",m0,smailtail);
-	    else if (netdata == 0 && rfc822 != 0)
-	      printf("bsmtp3rfc!%s%s\n",m0,smailtail);
-	    else if (netdata != 0 && rfc822 == 0)
-	      printf("bsmtp3nd!%s%s\n",m0,smailtail);
-	    else
-	      printf("bsmtp3ndrfc!%s%s\n",m0,smailtail);
+	      if (netdata == 0 && rfc822 == 0)
+		printf("bsmtp3!%s%s\n",m0,smailtail);
+	      else if (netdata == 0 && rfc822 != 0)
+		printf("bsmtp3rfc!%s%s\n",m0,smailtail);
+	      else if (netdata != 0 && rfc822 == 0)
+		printf("bsmtp3nd!%s%s\n",m0,smailtail);
+	      else
+		printf("bsmtp3ndrfc!%s%s\n",m0,smailtail);
+	    }
 	  }
 	}
 	return 0;
